# drizzle-benchmarks

./: .gitignore
bench/: bench.js  index.ts
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/migrations/2026-01-28-065614-0000_alter_order_details_pkeys/: down.sql  up.sql
rust/src/: lib.rs  main.rs  models.rs  queries.rs  schema.rs
