[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
chrono = { version = "0.4.43", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
mimalloc = "0.1"
parking_lot = "0.12"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.14"
socket2 = "0.5"
sysinfo = "0.32"
tokio = { version = "1", features = ["full", "parking_lot"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3
