[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
chrono = { version = "0.4.43", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }
dotenvy = "0.15.7"
mimalloc = "0.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }


[profile.release]
debug = false
lto = "thin"
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
